--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -33,9 +33,9 @@ twitter_username: jekyllrb
 github_username:  jekyll
 
 
-# jekyll-theme-cayman
+# 
 # Build settings
-theme: minima
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
